Release 1.9.0 (#117)
* Release 1.9.0

* Notebook - Order pin groups from most recently used to last used

* Notebook - Process ForRemoval("custom-table-link-migration")

* Notebook - When the window gets focus and switching opened module at the same time (clicking on the pins) the automatic reload switches back to old item

* Notebook - When the window gets focus and switching opened module at the same time (clicking on the pins) the automatic reload switches back to old item

* Account - Display current username and email

* Notebook - Moving ListItem by dropping it to one of the leaves in the category tree does not drop it all the parent categories ending up unwanted calls

* Integration Server - Delete old records on startup

* Integration - Split AccountPageActions

* Admin Panel - Roles For All - React migration

* Integration - Different parallelization for local and remote integration tests

* Admin Panel - Role management - Migrate to React

* ValidatedInputField accepts the InputField instead proxying the params

* Admin Panel - Disabled Role Management - Migrate to React

* Admin Panel - Error Report - Migrate to React

* Delete outdated files
Fix finishUpgrade FE test

* Admin Panel - Ban - Migrate to react

* Fix browser language based failure and some other minor stuff

---------

Co-authored-by: bondabear@gmail.com <Saphy371321>